# wallgrab

./: README.md  development_summary.txt  forge.config.ts  github_readme_eli5.txt  index.html  package-lock.json  package.json  scratch_analyze_4k.js  scratch_fetch.js  scratch_fetch_2.js  scratch_fetch_alpha.js  scratch_test_urls.js  tailwind.config.js  tsconfig.json
native/: Cargo.toml  index.d.ts  index.js  package.json
native/src/: downloader.rs  lib.rs  scraper.rs  types.rs
src/: App.tsx  index.css  main.ts  preload.ts  types.ts
src/components/: DownloadManager.tsx  EmptyState.tsx  Gallery.tsx  PreviewModal.tsx  Titlebar.tsx  Toast.tsx  UrlInput.tsx  WallpaperCard.tsx
